--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.20first">
-        <activity android:name=".Login"></activity>
+        <activity android:name=".Getdetails"></activity>
+        <activity android:name=".Signup" />
+        <activity android:name=".Login" />
         <activity android:name=".Profile" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Splashscreen">
@@ -24,7 +26,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544/6300978111" />
+            android:value="@string/App_ID" />
     </application>
 
 </manifest>
