--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.20first">
-        <activity android:name=".Getdetails"></activity>
+        <activity android:name=".ForgottenPassReset"></activity>
+        <activity android:name=".Getdetails" />
         <activity android:name=".Signup" />
         <activity android:name=".Login" />
         <activity android:name=".Profile" />
