--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.1'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'jp.wasabeef:glide-transformations:4.3.0'
-    implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
-    //implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
